fixed white link border visibility:hidden

--- a/css/main.less
+++ b/css/main.less
@@ -53,8 +53,8 @@ table {
 body
 {
   font-family: 'Georgia', Times, serif;
+  //background: url(../img/background.jpg) no-repeat;
 }
-
 
 #blubb
 {
@@ -62,7 +62,7 @@ body
   bottom: 170px;
   right: 45px;
   text-align: right;
-
+  
   header
   {
     margin-bottom: 15px;
@@ -78,12 +78,12 @@ body
     
   }
 
-  ul
+  ul.links
   {
     list-style-type: none;
     display: inline;
     
-    .link
+    li
     {
       margin-left: 10px;
       margin-right: 10px;
@@ -93,25 +93,28 @@ body
       &:hover::after
       {
         color: @text-color;
+        visibility: visible;
         content: "]";
       }
       
       &:hover::before
       {
         color: @text-color;
+        visibility: visible;
         content: "[";
       }
       
       &:after
       {
         color: @background-color;
-        display: hidden;
+        visibility: hidden;
         content: "]";
       }
       
       &:before
       {
         color: @background-color;
+        visibility: hidden;
         content: "[";
       }
     
